# time-logger

./: .env.example  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: chat_agent.py
app/core/: config.py
app/db/: init.sql  migration.py  session.py
app/routes/: auth_routes.py  chat_routes.py
app/schemas/: auth.py  response.py
app/services/: auth_service.py  chat_service.py
app/shared/: constants.py
app/tools/: project_management.py  utils.py
app/tools/task_managemet/: create_task.py  list_tasks.py  suggest_simmilar_tasks.py
app/tools/time_entry/: log_time.py  validate_daily_total.py
app/utils/: jwt.py  password_handler.py  ws_auth.py
